--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
  max-width: 70%;
 }
 
+.display-section {
+  margin: 2rem;
+}
+
 .favorites-section {
   margin-top: 5rem;
   font-size: 1.6rem;
