--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a:visited {
 
 .display-section {
   padding: 2rem;
-  margin: 6rem 3rem 2rem;
+  margin: 4rem 3rem 2rem;
   max-width: 70vw;
 }
 
@@ -139,7 +139,7 @@ a:visited {
 
 .fav-remove {
   display: inline-block;
-  font-display: center;
+  text-align: center;
   font-size: 1.1rem;
   color: rgb(230, 14, 14);
   background-color: transparent;
@@ -153,4 +153,20 @@ a:visited {
   color: rgb(255, 255, 255);
   background-color: rgb(230, 14, 14);
   border: .1rem solid rgb(230, 14, 14);
+}
+
+.alert-msg {
+  text-align: center;
+  font-size: 1.75rem;
+  font-weight: 100;
+  color: rgb(255, 255, 255);
+  padding: .7rem;
+}
+
+.alert.error {
+  background-color: rgb(230, 14, 14);
+}
+
+.alert.success {
+  background-color:  rgb(4, 134, 0);
 }
