--- a/css/style.css
+++ b/css/style.css
@@ -186,17 +186,19 @@ a:visited {
 
 .alert-msg {
   text-align: center;
-  font-size: 1.75rem;
+  font-size: 1.8rem;
   font-weight: 100;
   color: rgb(255, 255, 255);
-  padding: .7rem;
+  padding: 1rem;
 }
 
 .alert.error {
-  background-color: rgba(255, 0, 0, 0.75);
+  background-color: rgba(255, 0, 0, 0.65);
+  border-top: .75rem solid rgb(255, 0, 0);
+  border-bottom: .75rem solid rgb(255, 0, 0);
 }
 
 .alert.success {
   background-color:  rgba(4, 134, 0, 0.8);
-  border: .3rem solid rgb(4, 134, 0);
+  border: .75rem solid rgb(4, 134, 0);
 }
