--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a:visited {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 7rem 1rem 2rem;
+  margin: 5rem 1rem 2rem;
   font-size: 1.6rem;
 }
 
@@ -146,13 +146,13 @@ a:visited {
   justify-content: space-between;
   align-items: center;
   background-color: rgb(250, 250, 250);
+  box-shadow: 0rem .25rem .2rem rgba(0,0,0,.4);
   text-align: center;
   border: .1rem solid rgb(230, 230, 230);
   border-radius: .5rem;
-  max-width: 25rem;
+  max-width: 33%;
   margin: 1rem .7rem;
   padding: 3rem 1.2rem 1rem;
-  box-shadow: 0rem .25rem .2rem rgba(0,0,0,.4);
 }
 
 .fav-text {
