--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,12 @@ html {
   --primary-blue: rgb(41, 105, 243);
   --secondary-blue: rgb(93, 142, 248);
   --primary-green: rgb(4, 134, 0);
+  --secondary-green: rgba(4, 134, 0, 0.8);
   --primary-red: rgb(230, 14, 14);
+  --secondary-red: rgba(255, 0, 0, 0.8);
   --primary-white: rgb(255, 255, 255);
-  --primary-shadow: rgba(0,0,0,.2);
+  --primary-grey: rgb(44, 44, 44);
+  --primary-black: rgba(0,0,0,.2);
 }
 
 
@@ -55,7 +58,7 @@ a:visited {
 
 .display-section {
   padding: 1rem;
-  margin: 4.5rem 1rem 3rem;
+  margin: 3.75rem 1rem 3rem;
   max-width: 70vw;
 }
 
@@ -84,7 +87,7 @@ a:visited {
   margin: .8rem .4rem;
   cursor: pointer;
   outline: none;
-  box-shadow: 0rem .25rem .2rem rgba(0,0,0,.2);
+  box-shadow: 0rem .25rem .2rem var(--primary-black);
   transition: all ease-out 0.2s;
 }
 
@@ -93,7 +96,7 @@ a:visited {
   background-color: var(--primary-blue);
   border: .05rem solid var(--primary-blue);
   transform: translateY(-.27rem);
-  box-shadow: 0 1.2rem 1.6rem rgba(0,0,0,.2);
+  box-shadow: 0 1.2rem 1.6rem var(--primary-black);
 }
 
 .btn:active {
@@ -103,15 +106,15 @@ a:visited {
 
 .link {
   display: inline-block;
-  color: rgb(44, 44, 44);
+  color: var(--primary-grey);
   background-color:  transparent;
-  border: .05rem solid rgb(44, 44, 44);
+  border: .05rem solid var(--primary-grey);
 }
 
 .link:hover {
   color: var(--primary-white);
-  background-color:  rgb(44, 44, 44);
-  border: .05rem solid rgb(44, 44, 44);
+  background-color: var(--primary-grey);
+  border: .05rem solid var(--primary-grey);
 }
 
 .fav-add {
@@ -121,7 +124,7 @@ a:visited {
 
 .fav-add:hover {
   color: var(--primary-white);
-  background-color:  var(--primary-green);
+  background-color: var(--primary-green);
   border: .05rem solid var(--primary-green);
 }
 
@@ -134,7 +137,7 @@ a:visited {
 .fav-clear:hover,
 .fav-remove:hover {
   color: var(--primary-white);
-  background-color:  var(--primary-red);
+  background-color: var(--primary-red);
   border: .05rem solid var(--primary-red);
 }
 
@@ -156,7 +159,8 @@ a:visited {
   text-align: center;
   border: .1rem solid rgb(230, 230, 230);
   border-radius: .5rem;
-  width: 31%;
+  max-width: 40rem;
+  min-width: 20rem;
   margin: 1rem .7rem;
   padding: 3rem 1.2rem 1rem;
 }
@@ -177,7 +181,7 @@ a:visited {
   display: block;
   text-align: center;
   font-size: 1.2rem;
-  width: 90%;
+  min-width: 70%;
 }
 
 .btn .fav-remove:hover {
@@ -200,9 +204,9 @@ a:visited {
 }
 
 .alert.error {
-  background-color: rgba(255, 0, 0, 0.8);
+  background-color: var(--secondary-red);
 }
 
 .alert.success {
-  background-color:  rgba(4, 134, 0, 0.8);
+  background-color: var(--secondary-green);
 }
